Fixed Bug #42163 (fgetcsv() gives different output with and without Unicode)